<resources>
    <string name="app_name">Play Ground</string>
    <string name="map_key" translatable="true">AIzaSyDr_rwMxwHaDY3Qc633iIqoNDqjYYiDHbA</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_loc">Lokasi Saya</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fragment_event">Event Fragment</string>
    <string name="fragment_search">Search Fragment</string>
    <string name="fragment_settings">Settings Fragment</string>
    <string name="bluetooth_print">Bluetooth Print</string>
</resources>